2008-10-05  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Cairo.pm:
	* Cairo.xs:
	* CairoFont.xs:
	* CairoFt.xs:
	* CairoMatrix.xs:
	* CairoPath.xs:
	* CairoPattern.xs:
	* CairoSurface.xs:
	* MakeHelper.pm:
	* Makefile.PL:
	* cairo-perl-private.h:
	* cairo-perl.h:
	* cairo-perl.typemap:
	* examples/simple.pl:
	* t/Cairo.t:
	* t/CairoFont.t:
	* t/CairoFt.t:
	* t/CairoMatrix.t:
	* t/CairoPath.t:
	* t/CairoPattern.t:
	* t/CairoSurface.t: In preparation of the move to SVN, use the Id
	keyword in place of Header.

2008-09-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Makefile.PL: When prompting for auto-installing dependencies,
	default to 'no' so that automatic testers with CPANPLUS.pm don't
	end up invoking CPAN.pm.  (RT #38286)

2008-09-06  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* README: Fix the dependency versions for EU::Depends and
	EU::PkgConfig.

	* Cairo.pm: Mention http://cairographics.org/manual/ in the API
	documentation section.  Fix a POD error.

	* Makefile.PL: Support the enum value CAIRO_FONT_TYPE_QUARTZ.  (RT
	#34681)

2008-06-01  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/CairoSurface.t: Cairo::PsSurface->create can under certain
	conditions apparently return a surface that is not a PS surface.
	Handle this gracefully.  (RT #33871)

2008-04-19  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Cairo.pm
	* NEWS: Stable release 1.060.

2008-04-19  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Cairo.pm: Add documentation for new API.

2008-03-22  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Makefile.PL: Trap exceptions thrown by EU::PkgConfig->find.
	When one occurs, exit with status 0 to indicate to CPAN testers
	that their system isn't supported.

2008-02-24  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Cairo.pm
	* NEWS: Unstable release 1.053.

2008-02-24  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Cairo.pm
	* Cairo.xs
	* t/Cairo.t: Wrap cairo_has_current_point.

2008-02-12  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Cairo.pm